# cg-t1

./: .gitignore  CMakeLists.txt  Project.cbp  README.md
src/: configs.h  main.cpp
src/lib/: cam.h  etc.h  extras.h  glctexture.cpp  glctexture.h  input.h  menu.h  renders.h  shapes.h  state.h  structs.h
